--- a/browser/resources/settings/social_blocking_page/social_blocking_page.html
+++ b/browser/resources/settings/social_blocking_page/social_blocking_page.html
@@ -1,8 +1,12 @@
+<link rel="import" href="chrome://resources/html/cr.html">
 <link rel="import" href="chrome://resources/html/polymer.html">
 
+<link rel="import" href="chrome://resources/cr_elements/cr_link_row/cr_link_row.html">
 <link rel="import" href="chrome://resources/html/i18n_behavior.html">
+<link rel="import" href="chrome://resources/html/web_ui_listener_behavior.html">
 <link rel="import" href="chrome://resources/cr_elements/md_select_css.html">
 <link rel="import" href="social_blocking_browser_proxy.html">
+<link rel="import" href="../settings_page/settings_section.html">
 <link rel="import" href="../settings_shared_css.html">
 <link rel="import" href="../settings_vars_css.html">
 
@@ -12,7 +16,14 @@
     </style>
     <settings-toggle-button id="googleLoginControlType"
         pref="{{prefs.brave.google_login_default}}"
-        label="$i18n{googleLoginControlLabel}">
+        label="$i18n{googleLoginControlLabel}"
+        on-settings-boolean-control-change="setGoogleLoginEnabled_">
+        <template is="dom-if" if="[[shouldShowRestart_(
+          prefs.brave.google_login_default.value)]]">
+        <cr-button on-click="restartBrowser_" slot="more-actions">
+          $i18n{restart}
+        </cr-button>
+        </template>
     </settings-toggle-button>
     <settings-toggle-button id="fbEmbedControlType"
         pref="{{prefs.brave.fb_embed_default}}"
