--- a/ui/webui/resources/br_elements/br_toolbar/br_toolbar.html
+++ b/ui/webui/resources/br_elements/br_toolbar/br_toolbar.html
@@ -120,7 +120,7 @@
             <span class="nav-item_text">[[settingsTitle]]</span>
           </a>
         </li>
-        <li class="nav-items_list-item" title="[[braveRewardsTitle]]">
+        <!-- <li class="nav-items_list-item" title="[[braveRewardsTitle]]">
           <a class$="nav-item [[getNavItemSelectedClassName('rewards')]]" href="chrome://rewards">
             <span class="nav-item_icon">
               <svg
@@ -130,7 +130,7 @@
             </span>
             <span class="nav-item_text">[[braveRewardsTitle]]</span>
           </a>
-        </li>
+        </li> -->
         <li class="nav-items_list-item" title="[[historyTitle]]">
           <a class$="nav-item [[getNavItemSelectedClassName('history')]]" href="chrome://history">
             <span class="nav-item_icon">
@@ -165,7 +165,7 @@
             <span class="nav-item_text">[[downloadsTitle]]</span>
           </a>
         </li>
-        <li class="nav-items_list-item" title="[[walletsTitle]]">
+        <!-- <li class="nav-items_list-item" title="[[walletsTitle]]">
           <a class$="nav-item [[getNavItemSelectedClassName('wallet')]]" href="chrome://wallet">
             <span class="nav-item_icon">
               <svg
@@ -176,7 +176,7 @@
             </span>
             <span class="nav-item_text">[[walletsTitle]]</span>
           </a>
-        </li>
+        </li> -->
       </ul>
         <br-toolbar-search-field id="search"
           narrow="[[narrow]]"
